# HOS-InputDisplay

./: .gitignore  .gitmodules  Dockerfile  Makefile  OJDS-NX.json  README.md  build.sh
.github/workflows/: release.yml
client/: CMakeLists.txt
client-dotnet/: client-dotnet.csproj  client-dotnet.sln
client-dotnet/Res/: Controller.glb  JoyL.glb  JoyR.glb  Vallarta_Christopher_HW2_Controller.mtl  config.ini
client-dotnet/src/: Config.cs  Hid.cs  Math.cs  Program.cs
client/Include/: config.h  hid.h  sockets.h  socketshit.h
client/Res/: Vallarta_Christopher_HW2_Controller.mtl  config.ini
client/Source/: config.c  main.c  socketshit.c
source/: main.c  main.cpp  server.cpp  server.hpp  toolbox.json
